# CS251_3rdSem

./: README.md  Test.txt
200050013-200050130/: References.txt
200050013-200050130/Code/: evaluate.sh
Outlab_1/200050013-200050130/: References.txt
Outlab_1/200050013-200050130/Code/: download.sh  evaluate.sh
Outlab_2/: References.txt  main.tex  typeset.sh
Outlab_2/Outlab_2/: References.txt  main.bib  main.tex
Outlab_3/200050013-200050130/: references.txt
Outlab_3/200050013-200050130/scipy/: q3_a.py
Outlab_4/Project_folder/: .gitignore  References.txt  references.txt  requirements.txt
Outlab_4/Project_folder/cs251lab4_200050013_200050130/: Procfile  README.md  references.txt
Outlab_4/Project_folder/outlab-env/: pyvenv.cfg
Outlab_5/200050013-200050130/: references.txt
Outlab_5/200050013-200050130/Bonus/: bonus.sh  output.txt
Outlab_5/200050013-200050130/Q1/: Q1.sh
Outlab_5/200050013-200050130/Q2/: Q2.sh
Outlab_5/200050013-200050130/Q3/: Q3.sh
Outlab_5/200050013-200050130/Q4/: Q4.sh
Outlab_5/200050013-200050130/Q5/: Q5.sh
Outlab_6/200050013-200050130-outlab6/: references.txt
Outlab_6/200050013-200050130-outlab6/q1/: q1.java
Outlab_6/200050013-200050130-outlab6/q2/: q2.java
Outlab_6/200050013-200050130-outlab6/q3/: main.java  q3.java
Outlab_7/200050013-200050130/: tr1.txt  tr2.txt  tr3.txt  tr4.txt  tr5.txt  tr6.txt
Outlab_8/200050013-200050130/q3/: CMakeLists.txt  clear.sh  rawmake
Outlab_8/Final Submission/: references.txt
Outlab_9/: README.txt  references.txt  settings.gradle
Outlab_9/app/: build.gradle
(+143 files in other folders)
